# pytest-generator

./: .cruft.json  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: test.yml
docs/contributing/: 1.-contributing-guide.md  2.-coding-standard.md  3.-code-of-conduct.md  4.-acknowledgements.md
pytest_generator/: __init__.py  __main__.py  collect_from_ast.py  generate_tests.py  main.py
scripts/: clean.sh  install.sh  lint.sh  test.sh
templates/: test.py.jinja
tests/: __init__.py  conftest.py  test_main.py  test_version.py
tests/pytest_generator/: test_collect_from_ast.py  test_generate_tests.py  test_main.py
